--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MyApp</string>
+    <string name="button_text_send">Send</string>
+    <string name="button_text_reply">Reply</string>
+    <string name="text_header_message_received">Message Received!</string>
+    <string name="second_act_editText_hint">Enter Your Message Here</string>
+    <string name="editText_second_message_return">Enter Your Reply Here</string>
 </resources>
